# substrate-warmup

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  OVERVIEW.md  README.md  contributing.md  docker-compose.yml  ui-types.json
.github/workflows/: test.yml
chainspecs/: ent.json  ved.json
client/: Cargo.toml  example
client/examples/: client_stubs.rs
client/src/: json.rs  lib.rs  main.rs  method.rs  query.rs  remote_call.rs  serde_as_scale.rs  storage.rs  testnode.rs  wrapped_client.rs
client/src/storage_query/: augment_clap.rs  map.rs  mod.rs  value.rs
common/: Cargo.toml
common/src/: lib.rs
docker/builder/: Dockerfile  action.yml  publish  tmp.html  tmp2.html
modules/erc20/: Cargo.toml
modules/erc20/src/: erc20.rs  lib.rs
modules/multi-token/: Cargo.toml
modules/multi-token/src/: lib.rs  multi_token.rs
modules/voting/: Cargo.toml  README.md
modules/voting/src/: lib.rs  voting.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  runtime.rs  template.rs
scripts/: init.sh
src/: chain_spec.rs  cli.rs  lib.rs  main.rs  serializable_genesis.rs  service.rs
substrate-proxy/: Cargo.toml  readme.md
substrate-proxy/src/: lib.rs
