[package]
name = "substrate-warmup-chaingen"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
erc20 = { path = "modules/erc20" }
hex = "0.4.0"
node-template-runtime = { path = "runtime" }
paw = "1.0.0"
structopt = { version = "0.3.2", features = ["paw"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
substrate-chain-spec = "2"
substrate-consensus-aura-primitives = "2"
substrate-finality-grandpa-primitives = "2"
substrate-primitives = "2"
substrate-service = "2"
substrate-telemetry = "2"
sr-primitives = "2"
srml-system = "2"

[workspace]
members = [
    "runtime",
    "modules/multi-token",
    "modules/voting",
    "modules/erc20",
]

# package list generated using the following command in the substrate directory:
#
# ```
# rg -l . --glob '**Cargo.toml' \
#    | map ... bash -c 'rq -t < ...' \
#    | jq -r '.package.name | select(. != null)' \
#    | map X echo 'X = {'\
#          'git = "https://github.com/paritytech/substrate.git",' \
#          'rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc"' \
#      '}'
#
# cargo install ripgrep                            # rg
# cargo install --git https://github.com/bddap/map # map
# cargo install record-query                       # rq
# brew/apt/choco install jq                        # jq
# ```
#
# Unused substrate members are commented out, but left in place to serve as a comprehensive list of
# substrate workspace members in the pinned version.
[patch.crates-io]
# chain-spec-builder = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
fork-tree = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# node-cli = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# node-executor = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# node-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# node-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# node-rpc-client = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# node-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# node-template = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# node-template-release = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# node-template-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# node-testing = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
sr-api = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
sr-api-proc-macro = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# sr-api-test = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
sr-arithmetic = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# sr-arithmetic-fuzzer = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
sr-io = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# sr-sandbox = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
sr-staking-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
sr-std = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
sr-version = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-assets = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-aura = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-authority-discovery = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-authorship = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-babe = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-balances = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-collective = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-contracts = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-contracts-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-democracy = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-elections = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-elections-phragmen = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-evm = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-example = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-executive = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-finality-tracker = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-generic-asset = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-im-online = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-indices = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-membership = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-metadata = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-nicks = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-offences = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-scored-pool = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-session = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-staking = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-staking-reward-curve = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-sudo = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-support = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-support-procedural = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-support-procedural-tools = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-support-procedural-tools-derive = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-support-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-support-test = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-system = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-system-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-timestamp = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
srml-transaction-payment = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-treasury = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# srml-utility = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# subkey = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-application-crypto = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-authority-discovery = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-authority-discovery-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-basic-authorship = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-block-builder = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-block-builder-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-chain-spec = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-chain-spec-derive = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-cli = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-client = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-client-db = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-consensus-aura-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-consensus-babe = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-consensus-babe-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-consensus-common = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-consensus-pow = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-consensus-pow-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-consensus-rhd = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-consensus-slots = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-consensus-uncles = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-debug-derive = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-executor = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-externalities = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-finality-grandpa-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-header-metadata = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-keyring = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-keystore = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-network = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-offchain = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-offchain-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-panic-handler = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-peerset = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-phragmen = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-primitives-storage = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-rpc-api = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-rpc-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-rpc-servers = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-runtime-interface = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-runtime-interface-test-wasm = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-runtime-test = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-serializer = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-service = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-service-test = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-session = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-state-db = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-state-machine = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-telemetry = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-test-client = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-test-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-transaction-graph = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-transaction-pool-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-trie = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-wasm-builder-runner = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
substrate-wasm-interface = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
# transaction-factory = { git = "https://github.com/paritytech/substrate.git", rev = "aa937d9b4e5767f224cf9d5dfbd9a537e97efcfc" }
