[package]
name = "client"
version = "0.1.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
edition = "2018"

[dependencies]
futures = "0.1.29"
node-template-runtime = { path = "../runtime" }
parity-scale-codec = "1.0.0"
serde = "1"
serde_json = "1"
substrate-warmup-chaingen = { path = ".." }
tokio = "0.1"
tempdir = "0.3.7"
jsonrpc-client-transports = { version = "13", features = ["ws"] }
jsonrpc-core-client = "13"

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"

[dependencies.srml-system]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"

[dependencies.srml-metadata]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"

[dependencies.substrate-network]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"

[dependencies.substrate-service]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"

[dependencies.substrate-client]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"

[dependencies.substrate-consensus-babe]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"

[dependencies.substrate-executor]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"

[dependencies.substrate-finality-grandpa]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"

[dependencies.substrate-inherents]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"

[dependencies.substrate-rpc-api]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"

[dependencies.substrate-transaction-pool]
git = "https://github.com/paritytech/substrate.git"
rev = "870b976bec729aaf26cc237df9fd764b8f7b9d7e"
